// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAllParentsOfUnitProduct case: all found: GetChainProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "CHAIN PRODUCT ID 3",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: all found: GetGroupProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "GROUP PRODUCT ID 5",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: all found: GetUnitProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "UNIT PRODUCT ID for all found",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: all found: RESULT 1`] = `
Object {
  "_tag": "Right",
  "right": Object {
    "chainProduct": Object {
      "id": "CHAIN PRODUCT ID 3",
    },
    "groupProduct": Object {
      "parentId": "CHAIN PRODUCT ID 3",
    },
    "unitProduct": Object {
      "parentId": "GROUP PRODUCT ID 5",
    },
  },
}
`;

exports[`getAllParentsOfUnitProduct case: failed chain: GetChainProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "CHAIN PRODUCT ID 2",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: failed chain: GetGroupProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "GROUP PRODUCT ID 4",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: failed chain: GetUnitProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "UNIT PRODUCT ID for failed chain",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: failed chain: RESULT 1`] = `
Object {
  "_tag": "Left",
  "left": "CHAIN PRODUCT FETCH ERROR",
}
`;

exports[`getAllParentsOfUnitProduct case: failed group: GetChainProduct DEPS CALLS 1`] = `Array []`;

exports[`getAllParentsOfUnitProduct case: failed group: GetGroupProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "GROUP PRODUCT ID 2",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: failed group: GetUnitProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "UNIT PRODUCT ID for failed group",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: failed group: RESULT 1`] = `
Object {
  "_tag": "Left",
  "left": "GROUP FETCHING ERROR",
}
`;

exports[`getAllParentsOfUnitProduct case: failed unit: GetChainProduct DEPS CALLS 1`] = `Array []`;

exports[`getAllParentsOfUnitProduct case: failed unit: GetGroupProduct DEPS CALLS 1`] = `Array []`;

exports[`getAllParentsOfUnitProduct case: failed unit: GetUnitProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "UNIT PRODUCT ID for failed unit",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: failed unit: RESULT 1`] = `
Object {
  "_tag": "Left",
  "left": "UNIT FETCHING ERROR",
}
`;

exports[`getAllParentsOfUnitProduct case: undefined chain: GetChainProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "CHAIN PRODUCT ID 1",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: undefined chain: GetGroupProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "GROUP PRODUCT ID 3",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: undefined chain: GetUnitProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "UNIT PRODUCT ID for undefined chain",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: undefined chain: RESULT 1`] = `
Object {
  "_tag": "Left",
  "left": "ChainProduct cannot be found: CHAIN PRODUCT ID 1",
}
`;

exports[`getAllParentsOfUnitProduct case: undefined group: GetChainProduct DEPS CALLS 1`] = `Array []`;

exports[`getAllParentsOfUnitProduct case: undefined group: GetGroupProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "GROUP PRODUCT ID 1",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: undefined group: GetUnitProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "UNIT PRODUCT ID for undefined group",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: undefined group: RESULT 1`] = `
Object {
  "_tag": "Left",
  "left": "GroupProduct cannot be found: GROUP PRODUCT ID 1",
}
`;

exports[`getAllParentsOfUnitProduct case: undefined unit: GetChainProduct DEPS CALLS 1`] = `Array []`;

exports[`getAllParentsOfUnitProduct case: undefined unit: GetGroupProduct DEPS CALLS 1`] = `Array []`;

exports[`getAllParentsOfUnitProduct case: undefined unit: GetUnitProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "UNIT PRODUCT ID for undefined unit",
    },
  ],
]
`;

exports[`getAllParentsOfUnitProduct case: undefined unit: RESULT 1`] = `
Object {
  "_tag": "Left",
  "left": "UnitProduct cannot be found: UNIT PRODUCT ID for undefined unit",
}
`;

exports[`getAllParentsOfUnitProduct: test memoization: GetChainProduct DEPS CALLS 1`] = `Array []`;

exports[`getAllParentsOfUnitProduct: test memoization: GetGroupProduct DEPS CALLS 1`] = `Array []`;

exports[`getAllParentsOfUnitProduct: test memoization: GetUnitProduct DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "UNIT PRODUCT ID",
    },
  ],
]
`;

exports[`getGeneratedProduct case: all good: GetGeneratedProducte DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "PRODUCT ID for all good",
    },
  ],
]
`;

exports[`getGeneratedProduct case: all good: RESULT 1`] = `
Object {
  "_tag": "Right",
  "right": Object {
    "id": "GENERATED PRODUCT ID 5",
  },
}
`;

exports[`getGeneratedProduct case: failed fetch: GetGeneratedProducte DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "PRODUCT ID for failed fetch",
    },
  ],
]
`;

exports[`getGeneratedProduct case: failed fetch: RESULT 1`] = `
Object {
  "_tag": "Left",
  "left": "FETCHING ERROR",
}
`;

exports[`getGeneratedProduct case: undefined product: GetGeneratedProducte DEPS CALLS 1`] = `
Array [
  Array [
    Object {
      "id": "PRODUCT ID for undefined product",
    },
  ],
]
`;

exports[`getGeneratedProduct case: undefined product: RESULT 1`] = `
Object {
  "_tag": "Left",
  "left": "GeneratedProduct cannot be found: PRODUCT ID for undefined product",
}
`;
